# discord-rag-chatbot

./: .gitignore  README.md  pyproject.toml  run_all_tests.sh
data/knowledge_bases/: knowledge_bases.json
src/discord_rag_bot/: bot.py  test_modules.py  test_new_structure.py  test_rag_engine.py
src/discord_rag_bot/commands/: __init__.py  ask.py  delete_kb.py  list_kb.py  upload.py
src/discord_rag_bot/core/: __init__.py  knowledge_base.py  rag_engine.py
src/discord_rag_bot/embeddings/: __init__.py  embedding_service.py
src/discord_rag_bot/generation/: __init__.py  generator.py
src/discord_rag_bot/processing/: __init__.py  chunkers.py  converters.py  file_processor.py
src/discord_rag_bot/retrieval/: __init__.py  retriever.py
src/discord_rag_bot/storage/: __init__.py  vector_store.py
src/discord_rag_bot/utils/: __init__.py  config.py
